--- a/R/Generating Datasets.Rmd
+++ b/R/Generating Datasets.Rmd
@@ -58,7 +58,7 @@ null <-
         sim_covar(10, var = 1, cov = 0.5, name = "C1") %>% 
         sim_covar(10, var = 1, cov = 0.5, name = "C2")
   ) %>%
-  set_names(paste("null_df_", 1:100))
+  set_names(paste0("null_df_", 1:100))
 ```
 
 Inspect one:
@@ -82,7 +82,7 @@ needle_in_haystack <-
         sim_covar(10, var = 1, cov = 0.5, name = "C1") %>% 
         sim_covar(10, var = 1, cov = 0.5, name = "C2")
   ) %>%
-  set_names(paste("needle_in_haystack_", 1:100))
+  set_names(paste0("needle_in_haystack_", 1:100))
 ```
 
 Inspect one:
@@ -105,7 +105,7 @@ red_herring <-
         sim_discr(10, var = 1, cov = 0.5, group_means = c(-0.5, 0.5), name = "highcov") %>% 
         sim_discr(10, var = 1, cov = 0, group_means = c(-1, 1), name = "lowcov")
   ) %>%
-  set_names(paste("red_herring_", 1:100))
+  set_names(paste0("red_herring_", 1:100))
 ```
 
 Inspect one:
@@ -128,7 +128,7 @@ control <-
         sim_covar(10, var = 1, cov = 0, name = "N") %>% 
         sim_covar(5, var = 1, cov = 0.5, name = "C")
   ) %>%
-  set_names(paste("control_", 1:100))
+  set_names(paste0("control_", 1:100))
 ```
 
 inspect one:
