--- a/R/PCA vs. PLS-DA (fig1).Rmd
+++ b/R/PCA vs. PLS-DA (fig1).Rmd
@@ -25,16 +25,16 @@ I'll read in the datasets from "Generating Datasets.Rmd" and pick individual dat
 null.list <- read_rds(here("data", "null.rds"))
 control.list <- read_rds(here("data", "control.rds"))
 needle.list <- read_rds(here("data", "needle.rds"))
-
 ```
 
 Sample one dataset as an example
 
 ```{r}
-set.seed(999)
-null <- null.list[[sample(1:100, 1)]]
-control <- control.list[[sample(1:100, 1)]]
-needle <- needle.list[[sample(1:100, 1)]]
+# set.seed(999)
+set.seed(333)
+null <- sample(null.list, 1)[[1]]
+control <- sample(control.list, 1)[[1]]
+needle <- sample(needle.list, 1)[[1]]
 ```
 
 # Null
@@ -63,7 +63,8 @@ null.cor.p <-
 
 ```{r include=FALSE}
 null.pca <- opls(select(null, -group), plot = FALSE)
-null.pls <- opls(select(null, -group), null$group, plot = FALSE, permI = 500)
+# null.pls <- opls(select(null, -group), null$group, plot = FALSE, permI = 500)
+null.pls <- opls(select(null, -group), null$group, plot = FALSE, permI = 500, predI = 2)
 ```
 
 ## Create plots for Null
@@ -91,7 +92,7 @@ needle.cor <-
   needle %>% 
   select(-group) %>% 
   cor() %>%
-  as_data_frame(rownames = "row") %>%  
+  as_tibble(rownames = "row") %>%  
   gather(-row, key = col, value = cor)
 
 needle.cor.p <-
